--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,22 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">LifeBreath</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<div style="text-align:center">
-
-</div>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
+  </div>
+  <form class="form-inline my-2 my-lg-0 text-dark">
+    <li><a (click)="onLogoutClick()" href="#"><strong>Logout</strong> </a></li>
+  </form>
+</nav>
 
 <router-outlet></router-outlet>
-
