--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,32 +1,42 @@
-<body>
-<div style="text-align:center">
-  <h3>
-    Welcome to {{ title }}!
-  </h3>
-
-</div>
-<mat-card class="example-card">
-  <div class="login">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>User Login</mat-card-title>
-      <mat-card-subtitle>Enter Account Details</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <div >
-        <label for="username">Username</label><br><br>
-        <input required="" type="text" minlength="7" maxlength="7" #username class="form-control" id="username" placeholder="Username" ><br>
+<header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active" style="background-image: url('../../assets/1.jpeg')">
       </div>
-
-      <div class="form-group">
-        <label for="password">Password</label><br><br>
-        <input required="" type="password" #password (keyup.enter)="login(username.value, password.value)" class="form-control" id="password" placeholder="Password"><br>
+      <!-- Slide Two - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/7.png')">
       </div>
-      <mat-card-actions align="center">
-        <button (click)="login(username.value, password.value)" class="btn btn-default"> Login</button>
-      </mat-card-actions>
-    </mat-card-content>
+      <!-- Slide Three - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/8.jpg')">
+      </div>
+      <!-- Slide four - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/4.jpg')">
+      </div>
+      <!-- Slide four - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/5.jpg')">
+      </div>
+      <!-- Slide four - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/6.jpg')">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+  <a routerLink="/signup" class="button-signup">Sign-up</a>
+  <a routerLink="/login" class="button-login">Sign-In</a>
 
-</mat-card>
-</body>
+</header>
