--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,19 @@
-<form class="form-signin" #f="ngForm" (ngSubmit)="login(f.value)">
+<form class="form-signin" (submit)="login()">
 
   <h2 class="form-signin-heading">Please sign in</h2>
+  <div class="form-group">
+    <!--div class="alert alert-danger">Invalid username and/or password.</div-->
 
-  <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username and/or password.</div>
+    <label for="inputEmail" class="sr-only">Email address</label>
 
-  <label for="inputEmail" class="sr-only">Email address</label>
+    <input [(ngModel)] = "email" name="email" type="email" id="inputEmail" class="form-control" placeholder="Your email address" required autofocus>
+  </div>
 
-  <input type="email" id="inputEmail" name="email" ngModel class="form-control" placeholder="Email address" required autofocus>
+  <div class="form-group">
+    <label for="inputPassword" class="sr-only">Password</label>
 
-  <label for="inputPassword" class="sr-only">Password</label>
-
-  <input type="password" id="inputPassword" name="pass" ngModel class="form-control" placeholder="Password" required>
-
+    <input [(ngModel)] = "pass" name="pass" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+  </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
 </form>
