--- a/src/app/signuppage/signuppage.component.html
+++ b/src/app/signuppage/signuppage.component.html
@@ -1,32 +1,151 @@
-<body>
-<div style="text-align:center">
-  <h3>
-    Welcome to {{ title }}!
-  </h3>
+<!--form class="signup-form" #f="ngForm" (ngsubmit) = "signup(f.value)" >
+  <h1 class ="form-signup-heading">{{title}}</h1>
+  <label class="sr-only" >First Name</label>
+  <input type="text" id="fname-input" ngModel name="fname" placeholder="First Name" required>
+  <label class="sr-only" >Last Name</label>
+  <input type="text" id="lname-input" ngModel name="lname" placeholder="Last Name" required>
+  <label class="sr-only">Email Address</label>
+  <input type="email" id="email-input" ngModel name="email" class="form-control" placeholder="Enter Email" required autofocus>
+  <div *ngIf="invalidEmail" class="alert alert-danger">{{emailAlert}}</div>
+  <div>
+    <label class="sr-only" >Password</label>
+    <input type="password" id="pass-input" ngModel #password="ngModel" name="pass" class="form-control" placeholder="Enter Password" required [minlength]="" >
+    <button type="button" class="btn btn-outline-secondary mr-2" placement="right"
+            ngbPopover="Password should have at least 8 characters." popoverTitle="Popover on right">
+      ?
+    </button>
+    <!-- SET LENGTH OF PASSWORD TO 8-->
+    <!--input type="password" id="pass-confirm" ngModel #con_pass="ngModel" name="con_pass" class="'form-control" placeholder="Confirm Password" required-->
+  <!--/div>
+  <label class="sr-only" >Contact Number</label>
+  <input type="text" id="contact-input" ngModel name="contact" placeholder="Phone Number" required>
+  <label class="sr-only" >NIC</label>
+  <input type="text" id="nic-input" ngModel name="nic" placeholder="National ID number" required>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+</form-->
 
+<body class="bg-light">
+
+<div class="container">
+    <form (submit)="signup()">
+
+      <div class="py-5 text-center">
+        <h2>Register form</h2>
+      </div>
+
+      <div class="row">
+        <!div class="col-md-4 order-md-2 mb-4">
+          <!--div-- class="card mb-3">
+            <h3 class="card-header">LifeSave</h3>
+            <div class="card-body">
+              <h5 class="card-title">Blood Donation System</h5>
+            </div>
+            <img style="height: 200px; width: 100%; display: block;"
+                 src="../../../assets/card1.jpg"
+                 alt="Card image">
+            <div class="card-body">
+              <p class="card-text">One drop of your blood can save countless lifes!!!</p>
+            </div>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+            <div class="card-footer text-muted">
+              LifeSave
+            </div>
+          </div>
+        </div-->
+        <div class="col-md-8 order-md-1">
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="fname">First name</label>
+              <input type="text" class="form-control" [(ngModel)]="fname" id="fname" placeholder="First name" value="" name="fname" required>
+              <!--div class="alert alert-danger" *ngIf="fname.touched && !fname.valid">First name is required</div-->
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="lname">Last name</label>
+              <input type="text" class="form-control" [(ngModel)]="lname" id="lname" placeholder="Last name" value="" name="lname" required>
+              <!--div class="alert alert-danger" *ngIf="lname.touched && !lname.valid">Last name is required</div-->
+              <div class="invalid-feedback">
+                Valid last name is required.
+              </div>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="address">Address</label>
+            <input type="text" class="form-control" [(ngModel)]="address" id="address" placeholder="Your Address Here" name="address" required>
+            <!--div class="alert alert-danger" *ngIf="address.touched && !address.valid">Address id required</div-->
+            <div class="invalid-feedback">
+              Please enter your home address.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-5 mb-3">
+              <label for="NIC">NIC </label>
+              <input type="NIC" class="form-control" [(ngModel)]="NIC" id="NIC" placeholder="Your NIC Number" name="NIC" required>
+              <!--div class="alert alert-danger" *ngIf="NIC.touched && !NIC.valid">PLease enter your NIC number</div-->
+              <div class="invalid-feedback">
+                Please enter a valid nic number.
+              </div>
+            </div>
+
+            <div class="col-md-5 mb-3">
+              <label for="dob">Birthday</label>
+              <input type="date" class="form-control" [(ngModel)]="dob" id="dob" name='dob' required>
+              <!--div class="alert alert-danger" *ngIf="dob.touched && !dob.valid">Date of birth is required</div-->
+              <div class="invalid-feedback">
+                Please enter your birthday.
+              </div>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-5 mb-3">
+              <label for="contact">Contact No</label>
+              <input type="text" class="form-control" [(ngModel)]="contact" id="contact" name='contact' placeholder="(+94)XXXXXXXXXX" required>
+              <!--div class="alert alert-danger" *ngIf="contact.touched && !contact.valid">A valid phone number is required</div-->
+              <div class="invalid-feedback">
+                Please enter your home address.
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="col-md-5 mb-3">
+              <label for="email">Email </label>
+              <input type="email" class="form-control" [(ngModel)]="email" id="email" placeholder="Your Email Here" name="email" required>
+              <!--div class="alert alert-danger" *ngIf="email.touched && !email.valid">Email is required</div-->
+              <div class="invalid-feedback">
+                Please enter a valid email address.
+              </div>
+            </div>
+
+
+            <div class="col-md-5 mb-3 form-group">
+              <label for="pass">Password </label>
+              <input type="password" class="form-control" [(ngModel)]="pass" id="pass" placeholder="password" name="pass" required minlength="8">
+              <!--div class="alert alert-danger" *ngIf="pass.touched && !pass.valid">
+                <div *ngIf="pass.errors.required">Password is required</div>
+                <div *ngIf="pass.errors.minlength">Password must have at least {{pass.errors.minlength.requiredLength}} characters</div>
+              </div>
+              <div class="alert alert-danger" *ngIf="fname.touched && !fname.valid">First name is required</div-->
+              <div class="invalid-feedback">
+                Please enter a valid email address.
+              </div>
+            </div>
+          </div>
+
+          <hr class="mb-4">
+          <button class="btn btn-dark btn-lg btn-block" type="submit">Submit</button>
+        </div>
+      </div>
+
+
+  </form>
 </div>
-<mat-card class="example-card">
-  <div class="login">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>User Login</mat-card-title>
-      <mat-card-subtitle>Enter Account Details</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <div >
-        <label for="username">Username</label><br><br>
-        <input required="" type="text" minlength="7" maxlength="7" #username class="form-control" id="username" placeholder="Username" ><br>
-      </div>
-
-      <div class="form-group">
-        <label for="password">Password</label><br><br>
-        <input required="" type="password" #password (keyup.enter)="login(username.value, password.value)" class="form-control" id="password" placeholder="Password"><br>
-      </div>
-      <mat-card-actions align="center">
-        <button (click)="login(username.value, password.value)" class="btn btn-default"> Login</button>
-      </mat-card-actions>
-    </mat-card-content>
-  </div>
-
-</mat-card>
 </body>
