--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,35 @@
-<form class="form-signin" (submit)="login()">
+ <mat-card class="example-card">
+   <div class="card-header">
+     <mat-card-title >
+       <h2 class="form-signin-heading">
+         User Login
+       </h2>
+     </mat-card-title>
+     <mat-card-subtitle >
+       Enter Account Details
+     </mat-card-subtitle>
+   </div>
+   <div class="login">
+     <mat-card-content>
+       <form class="form-signin" (submit)="login()">
+         <div class="form-group">
+           <!--div class="alert alert-danger">Invalid username and/or password.</div-->
+           <label for="inputEmail" class="sr-only">Email address</label>
+           <input [(ngModel)]="email" name="email" type="email" id="inputEmail" class="form-control"
+                  placeholder="Your email address" required autofocus>
+         </div>
 
-  <h2 class="form-signin-heading">Please sign in</h2>
-  <div class="form-group">
-    <!--div class="alert alert-danger">Invalid username and/or password.</div-->
+         <div class="form-group">
+           <label for="inputPassword" class="sr-only">Password</label>
+           <input [(ngModel)]="pass" name="pass" type="password" id="inputPassword" class="form-control"
+                  placeholder="Password" required>
+         </div>
 
-    <label for="inputEmail" class="sr-only">Email address</label>
+         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+       </form>
+     </mat-card-content>
+   </div>
+ </mat-card>
 
-    <input [(ngModel)] = "email" name="email" type="email" id="inputEmail" class="form-control" placeholder="Your email address" required autofocus>
-  </div>
 
-  <div class="form-group">
-    <label for="inputPassword" class="sr-only">Password</label>
-
-    <input [(ngModel)] = "pass" name="pass" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-  </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
-</form>
 
