--- a/src/app/signuppage/signuppage.component.html
+++ b/src/app/signuppage/signuppage.component.html
@@ -93,7 +93,7 @@
 
             <div class="col-md-5 mb-3">
               <label for="dob">Birthday</label>
-              <input type="date" class="form-control" [(ngModel)]="dob" id="dob" name='dob' required>
+              <input type="date" class="form-control" [(ngModel)]="dob" [max]="today" id="dob" name='dob'  required>
               <!--div class="alert alert-danger" *ngIf="dob.touched && !dob.valid">Date of birth is required</div-->
               <div class="invalid-feedback">
                 Please enter your birthday.
