--- a/src/app/about-blood/about-blood.component.html
+++ b/src/app/about-blood/about-blood.component.html
@@ -1,5 +1,6 @@
 <app-sidebar></app-sidebar>
 <div class="container">
+  <h2>The Essence of Life... Blood</h2>
   <p>Blood is essential to life. Blood circulates through our body and delivers essential substances like oxygen and
     nutrients to the body’s cells. It also transports metabolic waste products away from those same cells. There is
     no substitute for blood. It cannot be made or manufactured. Generous blood donors are the only source of blood for
