--- a/src/app/about-blood/blood-donate/blood-donate.component.html
+++ b/src/app/about-blood/blood-donate/blood-donate.component.html
@@ -1,3 +1,4 @@
+<app-sidebar></app-sidebar>
 <div class="container">
   <p><strong>Blood donation is the ONLY WAY to provide blood to those in need of it.</strong></p>
   <br>
