--- a/src/app/about-blood/function-blood/function-blood.component.html
+++ b/src/app/about-blood/function-blood/function-blood.component.html
@@ -1,8 +1,9 @@
+<app-sidebar></app-sidebar>
 <div class="container">
   <p>In the human body, blood does a series of essential set of tasks in order the body to survive. such as,</p>
 
   <h2>
-    (A)    Transportation><br>(B)    Regulation<br>(C)    Protection
+    (A)    Transportation<br>(B)    Regulation<br>(C)    Protection
   </h2>
 <br><br>
   <h3>Transportation done by blood</h3><br>
