--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -183,6 +183,11 @@
               <option value="0">No</option>
             </select>
           </div>
+
+          <div class="col-md-5 mb-5">
+            <a class="alert-link" (click)="deleteSelf()">Deactivate Account</a>
+          </div>
+
         </div>
 
       <div  style = " float: right ; margin-left: 15cm" >
