--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       <a class="nav-link" (click)="toHome()">Home</a>
     </li>
     <li>
-      <a class="nav-link" (click)="toProfile()" )>Profile</a>
+      <a class="nav-link" (click)="toProfile()" >Profile</a>
     </li>
   </ul>
 
