--- a/src/app/about-blood/blood-donate/blood-donate.component.html
+++ b/src/app/about-blood/blood-donate/blood-donate.component.html
@@ -47,77 +47,78 @@
     <p>Among all of this blood groups not all blood groups are compatible with each other hence need to consider the
       compatibility of blood groups before transfusion</p>
     <br>
-    <table>
+    <table border="1" style="width: 701px; margin-left: 30px; border-collapse: collapse; height: 233px;"
+           cellspacing="0" cellpadding="0">
 
-      <tr>
+      <tr >
         <td>
-          Blood Group
+          <strong><span style="font-size: 20pt">Blood Group</span></strong>
         </td>
         <td>
-          Compatible Blood Groups
+          <strong><span style="font-size: 20pt">Compatible Blood Groups</span></strong>
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           A-
         </td>
-        <td>
+        <td class="cell-body">
           A-, O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           A+
         </td>
-        <td>
+        <td class="cell-body">
           A+, A-, O+, O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           B-
         </td>
-        <td>
+        <td class="cell-body">
           B-, O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           B+
         </td>
-        <td>
+        <td class="cell-body">
           B+, B-, O+, O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           AB-
         </td>
-        <td>
+        <td class="cell-body">td>
           AB-, A-, B-, O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           AB+
         </td>
-        <td>
+        <td class="cell-body">
           Compatible with all groups
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           O-
         </td>
-        <td>
+        <td class="cell-body">
           O-
         </td>
       </tr>
-      <tr>
-        <td>
+      <tr class="row-body">
+        <td class="cell-body">
           O+
         </td>
-        <td>
+        <td class="cell-body">
           O+, O-
         </td>
       </tr>
