--- a/src/app/donor-contact/donor-contact.component.html
+++ b/src/app/donor-contact/donor-contact.component.html
@@ -1,14 +1,14 @@
 
-<div *ngIf="donor">
-  <mat-card class="border-dark mb-3">
-    <mat-card-header>
+<div *ngIf="donor" class="col-md-12 mb-12">
+  <mat-card class="flex-fill" >
+    <mat-card-header minlength="1000px"><strong>
       Donor Contact Details
-    </mat-card-header>
-    <mat-card-content>
+    </strong></mat-card-header>
+    <mat-card-content align="centre">
       <mat-card-title>
         {{donor.name}}
-      </mat-card-title>
-      Donor Contact Number <span>{{donor.contact_number}}</span>
+      </mat-card-title><strong>
+      Donor Contact Number  </strong> <span>{{donor.contact_number}}</span>
     </mat-card-content>
   </mat-card>
 </div>
