--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,3 +1,13 @@
 .custom-row{
   padding-left: 250px;
 }
+
+.nav-link {
+  cursor: pointer;
+}
+
+.boxed {
+  display: flex;
+  float: contour;
+  border: 4px solid red;
+}
