--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -52,13 +52,13 @@
     <div class="col-md-3 mb-3">
       <select class="custom-select d-block w-100" id="bloodtype" [(ngModel)]="bloodtype" name="bloodtype" required>
         <option value="">Choose...</option>
-        <option>A</option>
+        <option>A-</option>
         <option>A+</option>
-        <option>B</option>
+        <option>B-</option>
         <option>B+</option>
-        <option>O</option>
+        <option>O-</option>
         <option>O+</option>
-        <option>AB</option>
+        <option>AB-</option>
         <option>AB+</option>
       </select>
     </div>
