--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -43,13 +43,13 @@
           <select class="custom-select d-block w-100" id="bloodtype" [(ngModel)]="bloodtype"
                   name="bloodtype" required>
             <option value="">Choose...</option>
-            <option>A</option>
+            <option>A-</option>
             <option>A+</option>
-            <option>B</option>
+            <option>B-</option>
             <option>B+</option>
-            <option>O</option>
+            <option>O-</option>
             <option>O+</option>
-            <option>AB</option>
+            <option>AB-</option>
             <option>AB+</option>
           </select>
         </div>
